<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearAtas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_orange"
            android:textColor="#fff"
            android:text="@string/login" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearBawah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <View
                android:layout_marginRight="16dp"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_cepat_dengan" />

            <View
                android:layout_marginLeft="16dp"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/colorAccent" />
        </LinearLayout>

        <Button
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_google"
            android:paddingLeft="10dp"
            android:id="@+id/btnSMS"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textColor="@color/colorBlack"
            android:background="@drawable/bg_white"
            android:text="@string/login_melalui_google" />

        <Button
            android:drawableLeft="@drawable/ic_facebook"
            android:paddingLeft="10dp"
            android:id="@+id/btnFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:background="@drawable/bg_blue"
            android:text="@string/lanjutkan_dengan_facebook" />
    </LinearLayout>
</RelativeLayout>